--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Bóson de Higgs - Wikipédia Clone</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <div>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <img src="assets/images/logo.png" width="200" alt="Logo Wikipédia Clone"/>
         </div>
     </div>
 
@@ -19,26 +19,61 @@
 
     <div class="content">
         <div class="sidebar">
-            <h2>Título</h2>
+            <h2>Tópicos</h2>
             <ul>
-                <li><a href="#">Links</a></li>
+                <li><a href="#introducao">Introdução</a></li>
+                <li><a href="#descoberta">Descoberta</a></li>
+                <li><a href="#importancia">Importância</a></li>
             </ul>
         </div>
 
         <div class="main">
-            
+            <h1>Bóson de Higgs</h1>
+            <hr>
+
+            <p id="introducao">
+                O <abbr title="Bóson de Higgs">Bóson</abbr> de Higgs é uma partícula elementar prevista pelo 
+                <font color="blue">Modelo Padrão da Física de Partículas</font>. 
+                Ele está associado ao <em>campo de Higgs</em>, responsável por fornecer 
+                <strong>massa</strong> a outras partículas fundamentais.
+            </p>
+
+            <blockquote>
+                “A descoberta do Bóson de Higgs foi uma das maiores conquistas científicas do século XXI.”  
+                <sub>— Cientistas do CERN</sub>
+            </blockquote>
+
+            <p id="descoberta">
+                A existência do Bóson de Higgs foi confirmada em <sup>2012</sup> no 
+                <abbr title="Organização Europeia para a Pesquisa Nuclear">CERN</abbr>, usando o 
+                <abbr title="Large Hadron Collider">LHC</abbr> (<em>Grande Colisor de Hádrons</em>).
+            </p>
+
+            <p id="importancia">
+                Antes da confirmação, muitos físicos <del>duvidavam</del> questionavam a existência 
+                do Bóson de Higgs. Porém, sua detecção ajudou a validar o Modelo Padrão, 
+                explicando por que algumas partículas possuem massa e outras não.
+            </p>
+
+            <p>
+                Sua fórmula mais conhecida aparece em contextos de física teórica, por exemplo:  
+                E = mc<sup>2</sup>, onde a massa (m) é parcialmente explicada pelo campo de Higgs.
+            </p>
         </div>
 
         <div class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
-                <li><a href="#">Âncoras</a></li>
+                <li><a href="#introducao">Introdução</a></li>
+                <li><a href="#descoberta">Descoberta</a></li>
+                <li><a href="#importancia">Importância</a></li>
             </ul>
         </div>
     </div>
 
     <div class="footer">
-
+        <hr>
+        <p><small>Este é um clone da Wikipédia feito por <font color="green">gamarques</font> para fins educacionais.</small></p>
     </div>
 </body>
 </html>
